# tracer

./: Cargo.toml  Makefile  build.rs  go.mod  go.sum  netspec.yaml  readme.md
.cargo/: config
cmd/clock/: main.go
cmd/projectile/: main.go
cmd/sphere_scene/: main.go
cmd/sphere_wall/: main.go
cmd/tracer/: main.go
examples/: all_refracted_and_reflected.yaml  fresnel_test.yaml  group.yaml  multiple_lights.yaml  normal_mapping.yaml  repo_photo.yaml  sample01.yaml  teapot.yaml  topez_jarli.yaml
examples/solar_system/: solar_system.yaml
netcode/cmd/coordinator/: main.go
netcode/cmd/worker/: main.go
netcode/pkg/pb/: net_render.pb.go  streaming.pb.go
pkg/openglcanvas/: openglcavnas.go
pkg/tracer/: camera.go  camera_test.go  canvas.go  canvas_test.go  comparefloat64.go  comparefloat64_test.go  intersections.go  intersections_test.go  light.go  light_test.go  material.go  material_test.go  matrix.go  matrix_test.go  ppmcanvas.go  ppmcanvas_test.go  rays.go  rays_test.go  shapes.go  shapes_test.go  transformations.go  transformations_test.go  tuple.go  tuple_test.go  world.go  world_test.go
proto/: net_render.proto  streaming.proto
src/: camera.rs  canvas.rs  intersections.rs  light.rs  main.rs  material.rs  matrix.rs  objects.rs  patterns.rs  ray.rs  scene_parser.rs  transformations.rs  tuple.rs  world.rs
src/tracer/: camera.rs  canvas.rs  intersections.rs  light.rs  material.rs  matrix.rs  mod.rs  obj_parser.rs  objects.rs  patterns.rs  ray.rs  scene_parser.rs  transformations.rs  tuple.rs  world.rs
