[package]
name = "rstracer"
version = "0.1.0"
authors = ["Rafael Franco <me@rafaelfranco.es>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
raylib = { git = "https://github.com/deltaphc/raylib-rs", branch = "master" }
rayon = "1.3.1"
rand = "0.7.0"
num-complex = "0.3"
