[package]
name = "rstracer"
version = "0.1.0"
authors = ["Rafael Franco <me@rafaelfranco.es>"]
edition = "2018"

[dependencies]
num-complex = "0.3"
rand = "0.7.0"
raylib = { git = "https://github.com/deltaphc/raylib-rs", branch = "master" }
rayon = "1.3.1"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"

[profile.bench]
debug = true

[profile.release]
debug = true
