[package]
name = "rstracer"
version = "0.1.0"
authors = ["Rafael Franco <me@rafaelfranco.es>"]
edition = "2018"

[dependencies]
futures = { version = "0.3", default-features = false, features = ["alloc"] }
futures-core = "0.3"
futures-util = "0.3"
num-complex = "0.3"
prost = "0.6"
rand = "0.7.0"
# raylib = { git = "https://github.com/deltaphc/raylib-rs", branch = "master" }
rayon = "1.3.1"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
tokio = { version = "0.2", features = ["macros", "sync", "stream", "time"] }
tonic = "0.3"
async-stream = "0.2"
log = "0.4"
pretty_env_logger = "0.4"
clap = "2.33"
png = "0.16"
base64 = "0.12"

[build-dependencies]
tonic-build = "0.3"

[profile.bench]
debug = true

[profile.release]
debug = false
debug-assertions = false
lto = true
opt-level = 3
overflow-checks = false
